Conversions to 4 significant figures. Highlight BG on selecting and navigation, all added.

--- a/Conversion Master_dev/Base.lproj/Main.storyboard
+++ b/Conversion Master_dev/Base.lproj/Main.storyboard
@@ -10,67 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Select Unit Type-->
-        <scene sceneID="11P-e5-FkA">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GEx-Ex-gpc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <collectionViewController id="PWD-hy-2JG" customClass="UnitSelectCollectionViewController" customModule="Conversion_Master_dev" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="kVQ-iz-PZB">
-                        <rect key="frame" x="0.0" y="64" width="414" height="672"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Tqz-WV-4ex">
-                            <size key="itemSize" width="121" height="120"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UnitTypeCell" id="dGT-pM-Jfz" customClass="UnitSelectViewCell" customModule="Conversion_Master_dev" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="121" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="121" height="120"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Rp-A6-rJF">
-                                            <rect key="frame" x="8" y="50" width="105" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </view>
-                                <color key="backgroundColor" red="0.68034556513756883" green="1" blue="0.68894528992057924" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstItem="0Rp-A6-rJF" firstAttribute="centerY" secondItem="dGT-pM-Jfz" secondAttribute="centerY" id="QaS-WU-aHV"/>
-                                    <constraint firstItem="0Rp-A6-rJF" firstAttribute="centerX" secondItem="dGT-pM-Jfz" secondAttribute="centerX" id="bUY-9j-52V"/>
-                                    <constraint firstItem="0Rp-A6-rJF" firstAttribute="leading" secondItem="dGT-pM-Jfz" secondAttribute="leadingMargin" id="ls9-2X-cwR"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="12"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                        <integer key="value" value="3"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outlet property="unitTypeLabel" destination="0Rp-A6-rJF" id="h2I-za-tuH"/>
-                                    <segue destination="d9c-7d-8qa" kind="show" identifier="UnitSelected" id="fs6-W8-Ybz"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="PWD-hy-2JG" id="60Q-pk-PHz"/>
-                            <outlet property="delegate" destination="PWD-hy-2JG" id="X3O-fx-erT"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="Select Unit Type" id="lpI-Cn-gMa"/>
-                </collectionViewController>
-            </objects>
-            <point key="canvasLocation" x="1799.2" y="101.19940029985008"/>
-        </scene>
         <!--Convert - Unit-->
         <scene sceneID="Q0P-I3-TOE">
             <objects>
@@ -168,6 +107,9 @@
                     <navigationItem key="navigationItem" title="Convert - Unit" id="aL5-uJ-Xq1">
                         <barButtonItem key="backBarButtonItem" title="Change Units" id="iCO-Ur-TdB"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="ToM-NG-1tK" id="zgq-sP-MaO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PmN-qZ-cSx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -190,12 +132,111 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="PWD-hy-2JG" kind="relationship" relationship="rootViewController" id="VuP-Y6-NS8"/>
+                        <segue destination="sZ6-jR-pLi" kind="relationship" relationship="rootViewController" id="nga-Te-qhw"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rgb-21-8rq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="860" y="101.19940029985008"/>
+        </scene>
+        <!--Conversion Master-->
+        <scene sceneID="I9i-lD-JHF">
+            <objects>
+                <viewController id="sZ6-jR-pLi" customClass="UnitSelectCollectionViewController" customModule="Conversion_Master_dev" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dgm-oa-2xF"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZOo-D0-daJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JK3-YT-k7D">
+                        <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iyh-tj-fby">
+                                <rect key="frame" x="0.0" y="63.666666666666686" width="414" height="598.33333333333326"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hWv-hQ-MgD">
+                                    <size key="itemSize" width="120" height="120"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="11" minY="0.0" maxX="10" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UnitTypeCell" id="neX-8X-uSz" customClass="UnitSelectViewCell" customModule="Conversion_Master_dev" customModuleProvider="target">
+                                        <rect key="frame" x="11" y="0.0" width="120" height="120"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0NZ-ET-peC">
+                                                    <rect key="frame" x="8" y="50" width="104" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="0NZ-ET-peC" firstAttribute="leading" secondItem="neX-8X-uSz" secondAttribute="leadingMargin" id="TCw-bk-peS"/>
+                                            <constraint firstItem="0NZ-ET-peC" firstAttribute="centerY" secondItem="neX-8X-uSz" secondAttribute="centerY" id="k7Q-f4-Ktp"/>
+                                            <constraint firstItem="0NZ-ET-peC" firstAttribute="centerX" secondItem="neX-8X-uSz" secondAttribute="centerX" id="n9c-Qh-8uu"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="0NZ-ET-peC" secondAttribute="trailing" id="r1m-5d-M1T"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                                <integer key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="unitTypeLabel" destination="0NZ-ET-peC" id="Bgq-1M-w4Y"/>
+                                            <segue destination="d9c-7d-8qa" kind="show" id="yuV-gt-Ddh"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="sZ6-jR-pLi" id="GOw-ek-gq0"/>
+                                    <outlet property="delegate" destination="sZ6-jR-pLi" id="gFa-p0-2f6"/>
+                                </connections>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Unit Type To Convert" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KUQ-P6-YF6">
+                                <rect key="frame" x="94.666666666666686" y="38.666666666666664" width="225" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.69803921568627447" green="0.69803921568627447" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unit Conversion App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RhI-cx-2UV">
+                                <rect key="frame" x="97.333333333333314" y="2.0000000000000018" width="220.33333333333337" height="28.666666666666671"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZOo-D0-daJ" firstAttribute="top" secondItem="iyh-tj-fby" secondAttribute="bottom" constant="10" id="6PC-Df-R7N"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iyh-tj-fby" secondAttribute="trailing" constant="-20" id="6V4-6P-UCn"/>
+                            <constraint firstItem="KUQ-P6-YF6" firstAttribute="top" secondItem="RhI-cx-2UV" secondAttribute="bottom" constant="8" id="Pj1-JV-T5s"/>
+                            <constraint firstItem="KUQ-P6-YF6" firstAttribute="centerX" secondItem="JK3-YT-k7D" secondAttribute="centerX" id="a8E-G7-KXY"/>
+                            <constraint firstItem="RhI-cx-2UV" firstAttribute="centerX" secondItem="JK3-YT-k7D" secondAttribute="centerX" id="bU1-hH-RUh"/>
+                            <constraint firstItem="RhI-cx-2UV" firstAttribute="top" secondItem="dgm-oa-2xF" secondAttribute="bottom" constant="2" id="fHe-Tj-h8e"/>
+                            <constraint firstItem="iyh-tj-fby" firstAttribute="top" secondItem="KUQ-P6-YF6" secondAttribute="bottom" constant="4" id="llg-49-y3O"/>
+                            <constraint firstItem="iyh-tj-fby" firstAttribute="leading" secondItem="JK3-YT-k7D" secondAttribute="leadingMargin" constant="-20" id="oRF-1C-Dcb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Conversion Master" id="VgT-CY-m3J">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="3mO-yg-JP9"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="iyh-tj-fby" id="VhI-D2-PJF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2lK-5g-Upb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1715.9420289855075" y="100.2717391304348"/>
         </scene>
     </scenes>
 </document>
